--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^1.0.1
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.1
+  google_maps_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
