--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.1
   google_maps_flutter: ^2.0.1
+  geolocator: ^7.0.1
+  geocoding: ^2.0.0
 
 dev_dependencies:
   flutter_test:
