--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   assets:
     - imagens/fundo.png
     - imagens/logo.png
+    - imagens/motorista.png
+    - imagens/passageiro.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
