--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.0.1
   geolocator: ^7.0.1
   geocoding: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
